--- a/GeoAddin/Properties/Resources.resx
+++ b/GeoAddin/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="WindowFilling" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WindowFilling.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WindowSchema" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WindowSchema.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
