--- a/GeoAddin/Properties/Resources.resx
+++ b/GeoAddin/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="DetachFilePic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DetachFilePic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="OpeningPic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OpeningPic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="RoomGenPic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RoomGenPic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
