--- a/GeoAddin/Properties/Resources.resx
+++ b/GeoAddin/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="ApartmentgraphyPic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ApartmentgraphyPic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CM_OpeningMEP" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CM_OpeningMEP.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DetachFilePic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DetachFilePic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
